--- a/Develop/style.css
+++ b/Develop/style.css
@@ -46,6 +46,7 @@ textarea {
 }
 
 .saveBtn {
+  padding: 20px;
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
@@ -56,4 +57,4 @@ textarea {
 .saveBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
-}
+};
